2009-04-01  Stephen Shaw  <sshaw@decriptor.com>

	* SQLite.cs: Created the SQLite.cs file
	Added some basic patron info

	* ChangeLog: Initial ChangeLog
